# Snake

./: .gitignore  CMakeLists.txt
depends/glad/: CMakeLists.txt
shaders/: lightShader.vs  shader.vs
src/: CMakeLists.txt  camera.h  game.cpp  game.h  main.cpp  resource_manager.cpp  resource_manager.h  shader.cpp  shader.fs  shader.h  shader.vs  sprite_renderer.cpp  sprite_renderer.h  texture.cpp  texture.h
